--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,11 @@
         tools:targetApi="31">
         <receiver
             android:name=".NewAppWidget"
-            android:exported="false">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <!-- 새로고침 액션 -->
+                <action android:name="com.example.coinexchange.ACTION_REFRESH" />
             </intent-filter>
 
             <meta-data
